# python-rasterstats

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test-rasterstats.yml
docs/: Makefile  cli.rst  conf.py  dev_guide.rst  index.rst  installation.rst  manual.rst  modules.rst  rasterstats.io.rst  rasterstats.rst  rasterstats.utils.rst
docs/notebooks/: ArcPy and rasterstats integration.ipynb  Basic Timing and Profiling.ipynb  Basic Usage.ipynb  Integrating with GeoPandas and Numpy.ipynb  Precipitation and Vegetation by State.ipynb
examples/: .gitignore  Integrating with GeoPandas and Numpy.ipynb  README.md  benchmark.py  multiproc.py  simple.py
scripts/: .gitignore  coverage.sh  profile.sh  provision.sh  rasterstats  release.sh  test.sh
src/rasterstats/: __init__.py  _version.py  cli.py  io.py  main.py  point.py  utils.py
tests/: conftest.py  myfunc.py  test_cli.py  test_io.py  test_point.py  test_utils.py  test_zonal.py
tests/data/: all_nulls.tif  dataset_mask.tif  feature.geojson  featurecollection.geojson  flip.py  geometry.geojson  latitude_correction_polygon.dbf  latitude_correction_polygon.shp  latitude_correction_polygon.shx  latitude_correction_raster.tif  lines.prj  lines.shp  lines.shx  multilines.shp  multilines.shx  multipoints.shp  multipoints.shx  multipolygons.shp  multipolygons.shx  point2.dbf  point2.shp  point2.shx  points.shx  points_noproj.shp  poly2.shp  poly2.shx  polygons.geojson  polygons.shx  polygons_groupby.dbf  polygons_groupby.shp  polygons_no_overlap.dbf  polygons_no_overlap.shp  polygons_no_overlap.shx  polygons_partial_overlap.dbf  polygons_partial_overlap.shp  rgb.tif  (+10 more)
